--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto para aprimorar tecnicas de testes automatizados em Cypress",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run",
+    "cy:open": "cypress open"
   },
   "keywords": [
     "Cypress",
