--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx cypress run --reporter mochawesome",
+    "build": "npx cypress run",
     "start": "npm run"
   },
   "keywords": [
